k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-website
  labels:
    app: argocd-website
    logging: "true"
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9113"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-website
  template:
    metadata:
      labels:
        app: argocd-website
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9113"
    spec:
      serviceAccountName: argocd-website-sa
      securityContext:
        runAsUser: 101 # nginx user id usually
        runAsGroup: 101
        runAsNonRoot: true
        fsGroup: 101

      containers:
      # ----------------------------
      # NGINX (serves your website)
      # ----------------------------
      - name: nginx
        image: ghcr.io/moiz-ali-moomin/argocd-website:bfa525edb77de377c2e4827c5514b9a9f6219de0
        ports:
          - containerPort: 8080
        volumeMounts: []
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"

      # -----------------------------------
      # Prometheus Exporter (sidecar)
      # -----------------------------------
      - name: nginx-prometheus-exporter
        image: nginx/nginx-prometheus-exporter:1.1.0
        args:
          - "-nginx.scrape-uri=http://127.0.0.1:8080/nginx_status"
        ports:
          - containerPort: 9113
        resources:
          requests:
            cpu: "10m"
            memory: "32Mi"
          limits:
            cpu: "50m"
            memory: "64Mi"

      volumes: []
