k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-website-svc
spec:
  type: ClusterIP
  selector:
    app: argocd-website
  ports:
    - port: 80
      targetPort: 80
